--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -134,8 +134,8 @@ jobs:
 
 - job: infrastructure_win10
   displayName: 'infrastructure/ tests (Windows 10)'
-  #dependsOn: decision
-  #condition: dependencies.decision.outputs['test_jobs.wptrunner_infrastructure']
+  dependsOn: decision
+  condition: dependencies.decision.outputs['test_jobs.wptrunner_infrastructure']
   pool:
     name: 'Hosted Windows Client'
   steps:
