--- a/tools/ci/azure/pip_install.yml
+++ b/tools/ci/azure/pip_install.yml
@@ -11,6 +11,7 @@ steps:
     echo "##vso[task.prependpath]$HOME/Library/Python/2.7/bin"
   displayName: 'Install Python packages (macOS)'
   condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-- powershell: pip --disable-pip-version-check install --upgrade ${{ parameters.packages }}
+# TODO: --no-cache dir is because of https://github.com/pypa/pip/issues/5250
+- powershell: pip --no-cache-dir --disable-pip-version-check install --upgrade ${{ parameters.packages }}
   displayName: 'Install Python packages (Windows)'
   condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
